# hw-report

./: .gitignore  CMakeLists.txt  README.md  darwin.go  darwin_test.go  go.mod  linux.go  main.go  requirements.txt  types.go  windows.go
.github/workflows/: go.yml
app/: __main__.py  app.py
app/components/: gpu.py
app/gui/: main_window.ui
app/gui/components/: gpu_layout.py  main.py
app/gui/layouts/: main.ui
app/lib/: gpu.py  gpus_cli.py  helpers.py
darwin/: darwin.go  darwin_test.go
linux/: linux.go
markdown/: markdown.go  markdown_test.go
python-app/: README.md  macos.requirements.txt  requirements.txt
python-app/app/lib/: gpu.py  gpus_cli.py
scripts/: update_components.py
src/: gpu_cli.cpp  hwreport.cpp  main.cpp  utils.cpp
src/include/: gpu.h  gpu_cli.h  hwreport.h  utils.h
src/ui/: gpu.ui  hwreport.ui  ui_gpu.h  ui_hwreport.h
test/: basic_test.py
types/: types.go
windows/: windows.go  windows_test.go
